2018-09-06 - version 0.9.0 RC3 (Thanks to Leandro Dorileo)
[+] New big feature: scrollable Frame
[+] Custom theme support: overriding theme colors with custom ones
[*] Fix bug in getLinearControlList

2018-08-13 - version 0.9.0 RC2
[+] New control: LoginDialog (a dialog with username and password fields)

2018-08-04 - version 0.9.0 RC1
[+] New control: File Picker (a dialog for file save/load operations)
[+] New property for Label: TextDisplay. It defines which part of Label title
   is shown when the title is longer than the Label length:
   - AlignLeft - the head of the Title is displayed
   - AlignRight - the tail of the Title is displayed
[+] New ListBox functions:
   - Item(index int) (title string, ok book) - returns a text of ListBox item
   by its index. If the item does not exist then ok is set to false. The
   function works similar Go 's, ok := map[key]'
   - PartialFind(text string, caseSensitive bool) int - return the index of
   the first item of ListBox that starts with the 'text'. If no item starts
   with the 'text' then '-1' is returned
[*] Fix bug in EditField: when new Title was set the current display offset was
   not reset. It might result in an application crash when new Title was
   shorter than the old one
[*] Fix bug with ListBox 'select item' event: the event was not emitted after
   pressing End, Home, PageUp, and PageDown

2018-07-17 - version 0.8.1
[+] New API functions SetColorMap and GetColorMap to change the current color
    palette
[*] FindNextControl function improved
[*] Fix selecting next control with TAB: disabled and invisible controls
    are skipped
[+] Next and previous control can be selected with Up and Down Arrow keys
[+] New event OnActive - is emitted when a control gains or lost focus

2018-04-07 - version 0.8.0
[+] New dialog type: SelectDialogEdit - a dialog with an edit box
[+] Added Control method destroy
[*] EditField event OnKeyPress now receives two arguments: key code and rune

2018-03-15 - version 0.8.0-RC3